--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
+    "react-sound": "^0.10.0",
     "redux": "^3.7.2"
   },
   "devDependencies": {
